fix intro z-index

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+
   margin-top: calc(-1 * var(--navbar-height));
 
   .loading,
@@ -9,7 +10,7 @@
     height: 100vh;
     width: 100%;
     max-width: 100% !important;
-    opacity: 0.7;
+    opacity: 1;
 
     .picture {
       object-fit: cover;
@@ -35,6 +36,7 @@
 
   .background {
     position: absolute !important;
+    z-index: --z-background-intro;
     z-index: 0;
     top: 0;
     left: 0;
